--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 apply plugin: 'com.google.gms.google-services'
 
@@ -22,6 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -33,6 +38,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.material:material:1.2.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -60,8 +66,63 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
 
+
+
+
+
+    // Lifecycle components
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // CameraX core library
+    def camerax_version = '1.0.0-beta03'
+    implementation "androidx.camera:camera-core:$camerax_version"
+
+    // CameraX Camera2 extensions
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+
+    // CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+
+    // CameraX View class
+    implementation 'androidx.camera:camera-view:1.0.0-alpha10'
+
+    def rxandroid_version = '2.1.1'
+    def rxjava_version = '2.1.1'
+
+    // RxAndroid
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+
+    // Glide
+    def glideVersion = '4.8.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+
+    // Swipe Refresh Layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
+    // Material Component
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    // Crop Image
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+    implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
+    // Photo View
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
     //implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
 
+}
+repositories {
+    mavenCentral()
 }
