--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,23 +16,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".MonthSpending"
+            android:exported="true" />
         <activity
             android:name=".Camera"
-            android:exported="true" >
-
-        </activity>
-
-        <activity android:name=".view.ImageActivity">
-
-        </activity>
-
+            android:exported="true"></activity>
+        <activity android:name=".view.ImageActivity"></activity>
         <activity android:name=".view.CameraActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
-
         <activity
             android:name=".SecondScreen"
             android:exported="true" />
@@ -52,13 +46,11 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SplashScreenActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
